--- a/main.kv
+++ b/main.kv
@@ -288,6 +288,26 @@ ScreenManager:
                         halign:"center"
                         font_style:"Caption"
                         pos_hint:{"center_x":.15, "center_y":.81}
+                    DateExpInc:
+                        pos_hint:{"center_y":.74}
+                    DataContainer:
+                        Details:
+                            height:wali.height
+                            orientation:"vertical"
+                            RecycleView:
+                                id: customers
+                                key_viewclass: 'viewclass'
+                                key_size: 'height'
+                                pos_hint:{"center_x":.5,"center_y":.5}
+                                RecycleBoxLayout:
+                                    id:wali
+                                    spacing:dp(1)
+                                    padding: dp(10)
+                                    default_size: None, dp(55)
+                                    default_size_hint: 1, None
+                                    size_hint_y: None
+                                    height: self.minimum_height
+                                    orientation: 'vertical'
 
                     MDFloatingActionButton:
                         icon:"plus"
@@ -593,3 +613,88 @@ ScreenManager:
             pos_hint:{'center_x':.85, 'center_y':.1}
             on_release:
                 app.back_space()
+<Details@MDBoxLayout>:
+    radius:9
+    adaptive_height:True
+    md_bg_color:.1,.1,.2,.1
+    pos_hint:{"center_x":.5,"top":.8}
+    orientation:"vertical"
+
+<RowCard>:
+    #orientation: "vertical"
+    md_bg_color: 1, 1, 1, 1
+    pos_hint:{"center_x":.5,"center_y":.3}
+    padding: "10dp"
+    #spacing: "5dp"
+    border_radius: 3
+    border_color_a: .5
+    border_color_a: 1
+    adaptive_height:True
+    radius: [3]
+    size_hint: None, None
+    size: app.size_x/1.5, app.size_y/11
+    focus_behavior: False
+    ripple_color:.9, .9, .95, 1
+    ripple_behavior: True
+    FloatLayout:
+        MDIcon:
+            icon:root.icon
+            badge_icon:"cat"
+            font_size:"30sp"
+            theme_text_color:"Custom"
+            text_color: 1, .5, .5, 1
+            pos_hint:{"center_x":.5,"center_y":.5}
+        MDLabel:
+            text:root.name
+            font_size:"15sp"
+            #halign:"center"
+            pos_hint:{"center_x":.63,"center_y":.5}
+        MDLabel:
+            text:root.price
+            pos_hint:{"center_x":1.3,"center_y":.5}
+
+<DataContainer@MDBoxLayout>:
+    size:dp(50),dp(50)
+    adaptive_height:True
+    orientation:"vertical"
+    pos_hint:{"top":.7}
+
+<DateExpInc@MDBoxLayout>:
+    size:dp(100),dp(50)
+    adaptive_height:True
+    orientation:"vertical"
+    MDBoxLayout:
+        md_bg_color:36/255, 146/255, 255/255, 1
+        MDLabel:
+            text:"july 22"
+            halign:"center"
+            font_size:"15sp"
+            pos_hint:{"center_x":.2}
+            height: self.texture_size[1]
+            width: self.texture_size[1]
+        MDLabel:
+            text:"Expenses:-"+app.td_exp+"/="
+            halign:"center"
+            font_size:"12sp"
+            pos_hint:{"center_x":.6}
+            height: self.texture_size[1]
+            width: self.texture_size[1]
+        MDLabel:
+            text:"Income:+"+app.td_inc+"/="
+            halign:"center"
+            font_size:"12sp"
+            pos_hint:{"center_x":.8}
+            height: self.texture_size[1]
+            width: self.texture_size[1]
+<More>:
+    adaptive_height:True
+    md_bg_color:6/255, 146/255, 255/255, 1
+    size_hint:None, None
+    size:app.size_x/1.5, app.size_y/35
+    radius:2
+    ripple_color:.1,.4,.4,1
+    ripple_behavior: True
+    MDIcon:
+        icon:root.icon
+        halign:"center"
+        font_size:"35sp"
