--- a/main.kv
+++ b/main.kv
@@ -232,7 +232,7 @@ ScreenManager:
                         FloatLayout:
                             MDLabel:
                                 halign:"center"
-                                text:app.account_amount
+                                text:app.dummy_account_amount
                                 theme_text_color:"Custom"
                                 text_color:1,1,1,1
                                 font_style:"H5"
