data view update done!
the front view of data is finished i will start with statistics soon

--- a/main.kv
+++ b/main.kv
@@ -666,7 +666,7 @@ ScreenManager:
     MDBoxLayout:
         md_bg_color:36/255, 146/255, 255/255, 1
         MDLabel:
-            text:"july 22"
+            text:app.date_frm
             halign:"center"
             font_size:"15sp"
             pos_hint:{"center_x":.2}
